--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -76,7 +76,7 @@
   <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page, with an updated "Last Updated" date.</p>
 
   <div class="backlink">
-    <a href="https://yaronskihoma.github.io/VideoAdTest/">
+    <a href="https://yaronskihoma.github.io/VideoTask1/index.html">
       <button>Back to Video Ad Test</button>
     </a>
   </div>
