--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div id="cameraPermissionPopup">
     <h2>Allow Camera Access</h2>
     <p>This experience requires access to your camera to track your emotions while watching the video.</p>
-    <p><a href="https://YOUR_DOMAIN/privacy-policy" target="_blank">Read our Privacy Policy</a></p>
+    <p><a href="https://yaronskihoma.github.io/VideoTask1/privacypolicy.html" target="_blank">Read our Privacy Policy</a></p>
     <button id="allowCameraBtn">Allow Camera</button>
   </div>
 
