--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <div id="videoContainer">
     <video id="videoPlayer" preload="auto">
-      <source src="https://assets.homa-cloud.com/clicqla3j02wfyq01nkyf7621/853d663c-39ba-4755-bf72-1da193d2e2d4/HIR_C67_V4_WW_VID_1080x1920_33s.mp4" type="video/mp4">
+      <source src="https://x-ad-assets.s3.amazonaws.com/media_asset/e3ff10b4f14faa07/media" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -81,7 +81,7 @@
   <div id="cameraPermissionPopup">
     <h2>Allow Camera Access</h2>
     <p>This experience requires access to your camera to track your emotions while watching the video.</p>
-    <p><a href="https://yaronskihoma.github.io/VideoTask1/privacypolicy.html" target="_blank">Read our Privacy Policy</a></p>
+    <p><a href="https://yaronskihoma.github.io/VideoTask2/privacypolicy.html" target="_blank">Read our Privacy Policy</a></p>
     <button id="allowCameraBtn">Allow Camera</button>
   </div>
 
